--- a/addons/dotnetquestsystem/api/QuestSystemAPI.csproj
+++ b/addons/dotnetquestsystem/api/QuestSystemAPI.csproj
@@ -5,6 +5,15 @@
     <RootNamespace>dotnetquestsystem</RootNamespace>
     <AssemblyName>dotnetquestsystem</AssemblyName>
     <Nullable>enable</Nullable>
+    
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    
+    <EnableDynamicLoading>true</EnableDynamicLoading>
   </PropertyGroup>
+  
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\src\DotnetQuestSystem.Core\DotnetQuestSystem.Core.csproj" />
+  </ItemGroup>
+  
 </Project>
